--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,3 +1,27 @@
 * {
   box-sizing: border-box;
-}/*# sourceMappingURL=style.css.map */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+header .header__logo {
+  padding: 10px;
+}
+
+@media (min-width: 768px) {
+  header .header__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
