--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,5 +1,15 @@
+.cards {
+  height: 70px;
+  background: #f2f2f2;
+  width: 335px;
+  border-radius: 20px;
+  filter: drop-shadow(1px 1px 6px rgba(0, 0, 0, 0.2));
+}
+
 * {
+  font-family: "roboto", sans-serif;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
@@ -14,7 +24,48 @@ header {
   justify-content: center;
 }
 header .header__logo {
-  padding: 10px;
+  padding: 30px 0 15px 0;
+}
+header .header {
+  width: 100%;
+  height: 50px;
+}
+header input {
+  border: none;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background: #F2F2F2;
+  height: 300px;
+  box-shadow: 4px -4px 8px rgba(0, 0, 0, 0.2);
+}
+.about__link {
+  height: 50px;
+  width: 228px;
+  margin: 0 auto;
+  display: inline-block;
+  padding: 15px;
+  background: linear-gradient(to bottom, #FF79DA, #9356DC);
+  color: white;
+  text-decoration: none;
+  border-radius: 30px;
+}
+.about h1 {
+  margin-bottom: 0;
+}
+.about p {
+  margin-bottom: 30px;
+}
+
+.howto h2 {
+  margin: 50px 0 0 20px;
+}
+.howto .howto__cards {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 768px) {
@@ -24,4 +75,4 @@ header .header__logo {
     align-items: center;
     justify-content: center;
   }
-}
+}/*# sourceMappingURL=style.css.map */
