--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -3,8 +3,24 @@ $main-color: #9356DC;
 $second-color: #FF79DA;
 $third-color: #99E2D0;
 
+// bords link
+$radius-link: 30px;
+
+
+// Cards
+.cards {
+    
+    height: 70px;
+    background: #f2f2f2;
+    width: 335px;
+    border-radius: 20px;
+    filter: drop-shadow(1px 1px 6px rgba(0, 0, 0, 0.2));
+}
+
 * {
+    font-family: 'roboto', sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
@@ -20,7 +36,59 @@ header {
     justify-content: center;
 
     .header__logo {
-        padding: 10px;
+        padding: 30px 0 15px 0;
+    }
+
+    .header {
+        width: 100%;
+        height: 50px;
+    }
+
+    input {
+        border: none;
+    }
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background: #F2F2F2;
+    height: 300px;
+    box-shadow: 4px -4px 8px rgba(0, 0, 0, 0.2);
+
+    &__link {
+        height: 50px;
+        width: 228px;
+        margin: 0 auto;
+        display: inline-block;
+        padding: 15px;
+        background: linear-gradient(to bottom, $second-color, $main-color);
+        color: white;
+        text-decoration: none;
+        border-radius: $radius-link;
+        // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    & h1 {
+        margin-bottom: 0;
+    }
+
+    & p {
+        margin-bottom: 30px
+    }
+}
+
+.howto {
+
+
+    & h2 {
+        margin: 50px 0 0 20px;
+    }
+
+    .howto__cards {
+        display: flex;
+        flex-direction: column;
     }
 }
 
