--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,6 +1,7 @@
 .cards {
   height: 70px;
   background: #f2f2f2;
+  align-content: center;
   width: 335px;
   border-radius: 20px;
   filter: drop-shadow(1px 1px 6px rgba(0, 0, 0, 0.2));
@@ -10,6 +11,7 @@
   font-family: "roboto", sans-serif;
   box-sizing: border-box;
   text-decoration: none;
+  color: black;
 }
 
 body {
@@ -61,11 +63,14 @@ header input {
 }
 
 .howto h2 {
-  margin: 50px 0 0 20px;
+  margin: 50px 0 30px 20px;
 }
 .howto .howto__cards {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 25px;
 }
 
 @media (min-width: 768px) {
