--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,3 +1,15 @@
+.content-background {
+  background: #f2f2f2;
+}
+
+.white {
+  color: white;
+}
+
+.black {
+  color: black;
+}
+
 .cards {
   height: 70px;
   background: #f2f2f2;
@@ -11,7 +23,7 @@
   font-family: "roboto", sans-serif;
   box-sizing: border-box;
   text-decoration: none;
-  color: black;
+  list-style: none;
 }
 
 body {
@@ -40,7 +52,6 @@ header input {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: #F2F2F2;
   height: 300px;
   box-shadow: 4px -4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -71,6 +82,24 @@ header input {
   align-items: center;
   text-align: center;
   gap: 25px;
+}
+
+.circle {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #9356DC;
+}
+
+.restaurant__img {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.footer-container {
+  background: #353535;
 }
 
 @media (min-width: 768px) {
