--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -6,6 +6,22 @@ $third-color: #99E2D0;
 // bords link
 $radius-link: 30px;
 
+// couleur background
+
+.content-background {
+    background: #f2f2f2;
+}
+
+// polices
+
+.white {
+    color: white;
+}
+
+.black {
+    color: black;
+}
+
 // Cards
 .cards {
     
@@ -21,7 +37,8 @@ $radius-link: 30px;
     font-family: 'roboto', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
-    color: black;
+    list-style: none;
+    // color: black;
 }
 
 body {
@@ -54,7 +71,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background: #F2F2F2;
+    // background: #F2F2F2;
     height: 300px;
     box-shadow: 4px -4px 8px rgba(0, 0, 0, 0.2);
 
@@ -94,6 +111,27 @@ header {
         text-align: center;
         gap: 25px;
     }
+}
+
+.circle {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: $main-color;
+}
+
+// restaurant section
+
+.restaurant {
+    &__img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+}
+
+.footer-container {
+    background: #353535;
 }
 
 @media (min-width: 768px) {
