--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -12,6 +12,10 @@ $radius-link: 30px;
     background: #f2f2f2;
 }
 
+.marginbas {
+    margin-bottom: 0;
+}
+
 // polices
 
 .white {
@@ -31,6 +35,10 @@ $radius-link: 30px;
     width: 335px;
     border-radius: 20px;
     filter: drop-shadow(1px 1px 6px rgba(0, 0, 0, 0.2));
+}
+
+.cards-radius {
+    border-radius: 15px;
 }
 
 * {
@@ -67,6 +75,27 @@ header {
     }
 }
 
+.header__form {
+    display: flex;
+    // width: 375px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;
+    flex-shrink: 0;
+    background: #eaeaea;
+
+    & input {
+        background: #eaeaea;
+        width: 200px;
+        font-family: 'roboto', sans-serif;
+        font-size: medium;
+        color: #353535;
+    }
+}
+
+
+
 .about {
     display: flex;
     flex-direction: column;
@@ -93,7 +122,7 @@ header {
     }
 
     & p {
-        margin-bottom: 30px
+        margin: 20px 20px 30px 20px;
     }
 }
 
@@ -127,11 +156,25 @@ header {
         width: 100%;
         height: 200px;
         object-fit: cover;
+        border-radius: 15px 15px 0 0;
+    }
+
+    & figure {
+        background: white;
     }
 }
 
 .footer-container {
     background: #353535;
+    padding: 22px 25px 22px 25px;
+}
+
+.footer-logo {
+    fill: white;
+}
+
+.footer-links {
+    margin-bottom: 0;
 }
 
 @media (min-width: 768px) {
