--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -2,6 +2,51 @@
 $main-color: #9356DC;
 $second-color: #FF79DA;
 $third-color: #99E2D0;
+$white: #ffffff;
+$black: #353535;
+$grey: #EAEAEA;
+$shadow: #D5D5D5;
+
+// fonts
+$font-weight: (
+    light: 300,
+    regular: 400,
+    medium: 500,
+    bold: 700,
+);
+
+// degres
+
+$degree: 357deg;
+
+// mixin
+
+/**** logo ****/
+
+@mixin cursive__logo {
+    font-weight: map-get($font-weight, regular);
+    font-size: 28px;
+    font-family: "Shrikhand", cursive;
+}
+
+/**** gradient ****/
+@mixin gradient ($orientation: $degree) {
+    background:linear-gradient( $degree, $main-color, $second-color);
+}
+
+/**** cercle ****/
+@mixin circle {
+    border-radius: 50%;
+}
+/**** Shadow ****/
+@mixin object-shadow ($color: $shadow) {
+    box-shadow: 0 4px 10px 0 $color;
+}
+
+/**** gradient ****/
+@mixin gradient ($oriantation: $degree) {
+    background:linear-gradient( $degree, $main-color, $second-color);
+}
 
 // bords link
 $radius-link: 30px;
@@ -171,11 +216,208 @@ header {
 
 .footer-logo {
     fill: white;
+    color: white;
 }
 
-.footer-links {
-    margin-bottom: 0;
+.footer__links {
+    
+    padding: 0;
+
+    & li {
+        // padding: 10px;
+        display: flex;
+        padding-bottom: 7px;
+    }
+
+    &--icon {
+            // display: flex;
+            padding-right: 5%;
+            justify-content: center;
+            align-items: center;
+            width: 25px;
+            height: 20px;
+            font-size: 15px;
+    }
+
 }
+
+
+
+// Menu page
+
+// **** Header **** //
+.header__back {
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        left: 5%;
+        width: 20px;
+        height: 20px;
+        top: 2.5%;
+        font-size: 30px;
+        color: $black;
+}
+
+// **** bouton like **** //
+
+.button__like{
+    width: 28px;
+    z-index: 0;
+    position: relative;
+    font-family: "Font Awesome 5 Free";
+    font-size: 25px;
+    padding: 0;
+    border: transparent 0px solid;
+    background-color: transparent;
+    -webkit-text-stroke: 1px white;
+    cursor: pointer;
+}
+
+.hero__btngradient{
+    width: 218px;
+    height: 50px;
+    color: $white;
+    font-size: 16px;
+    @include gradient;
+    border-radius: 25px;
+    border: none;
+    font-weight: map-get($font-weight, medium );
+    @include object-shadow;
+    cursor: pointer;
+    margin: 27px 75px 57px 82px;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+        opacity: 0.88;
+        @include object-shadow(darken($shadow, 15%));
+    }
+}
+
+
+.entete__restaurant--img {
+    position: relative;
+    width: 100%;
+    height: 250px;
+}
+
+.menu {
+    position: relative;
+    background-color: darken ($white, 6%);
+    border-radius: 25px 25px 0px 0px;
+    padding: 2% 5% 5% 5%;
+    z-index: 0;
+
+    &__heading {
+        display: flex;
+        align-items: center;
+        margin: auto;
+
+        & h2 {
+            width: 87%;
+            @include cursive__logo;
+        }
+    }
+
+    &__container 
+
+    &__orderbtn {
+        display: flex;
+        justify-content: center;
+    }
+
+}
+
+.menu-type {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    &__heading {
+        position: relative;
+        margin: 4% 0% 2% 0%;
+        padding: 10px 0px;
+        font-size: 18px;
+        font-weight: map-get($font-weight, light);
+        text-transform: uppercase;
+
+        &::after {
+            display: block;
+            position: absolute; 
+            bottom: 2px;
+            content: "";
+            width: 40px;
+            height: 4px;
+            background-color: $third-color;
+        }
+    }
+}
+
+.menu-cards {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px 0px;
+    padding: 0;
+    background-color: white;
+    @include object-shadow;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+
+    &__info {
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+        width: 100%;
+        margin: 2%;
+        gap: 2%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    &__description {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+        padding: 5px;
+    
+
+        & h4 {
+            margin: 0;
+            font-size: 16px;
+            font-weight: map-get($font-weight, medium);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        & p {
+            margin: 0;
+            font-weight: map-get($font-weight, light);
+            font-size: 15px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+
+    &__checkout {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        width: 20%;
+        margin-right: -20%;
+        border-radius: 0px 15px 15px 0px;
+        background-color: $third-color;
+        transition: margin-right 800ms cubic-bezier(.63, 1.23, .96, .92);
+    }
+}
+
 
 @media (min-width: 768px) {
 
