--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,3 +1,8 @@
+@charset "UTF-8";
+a:visited {
+  color: #000; /* Couleur des liens visités */
+}
+
 /**** logo ****/
 /**** gradient ****/
 /**** cercle ****/
@@ -121,41 +126,105 @@ header input {
   background: #9356DC;
 }
 
-.restaurant__img {
+.restaurant__cards {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 251px;
+  margin: auto;
+  margin-bottom: 18px;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 10px 0 #D5D5D5;
+}
+.restaurant__cards:hover {
+  box-shadow: 0 4px 10px 0 #bcbcbc;
+}
+.restaurant__cards--img {
+  position: relative;
+  overflow: hidden;
+  height: 175px;
+  border-radius: 15px 15px 0px 0px;
+}
+.restaurant__cards--img img {
   width: 100%;
-  height: 200px;
+  height: 175px;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 15px 15px 0 0;
 }
-.restaurant figure {
-  background: white;
+.restaurant__cards--img--markerinfo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 15px;
+  top: 12px;
+  width: 80px;
+  height: 30px;
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: #278870;
+  font-weight: 500;
+}
+.restaurant__cards--info {
+  display: flex;
+  align-items: flex-start;
+  height: auto;
+  min-height: 75px;
+  padding: 15px;
+}
+.restaurant__cards--info--text {
+  width: 90%;
+}
+.restaurant__cards--info h4, .restaurant__cards--info p {
+  margin: 0;
+}
+.restaurant__cards--info h4 {
+  width: 267px;
+  height: 20px;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+.restaurant__cards--info p {
+  height: 24px;
+  font-weight: 300;
+  font-size: 17px;
+}
+.restaurant__cards--like {
+  position: absolute;
+  top: 76%;
+  right: 7%;
+  font-size: 25px;
 }
 
-.footer-container {
+.footer__container {
   background: #353535;
   padding: 22px 25px 22px 25px;
+  margin-top: 100px;
 }
-
-.footer-logo {
-  fill: white;
-  color: white;
-}
-
-.footer__links {
+.footer__container .footer__container--links {
   padding: 0;
 }
-.footer__links li {
+.footer__container .footer__container--links li {
   display: flex;
   padding-bottom: 7px;
 }
-.footer__links--icon {
+.footer__container--icon {
   padding-right: 5%;
   justify-content: center;
   align-items: center;
   width: 25px;
   height: 20px;
   font-size: 15px;
+}
+
+.footer__container--logo {
+  margin: 0 0 16px 0;
+  font-weight: 400;
+  font-size: 28px;
+  font-family: "Shrikhand", cursive;
+  font-size: 22px;
+  color: #ffffff;
 }
 
 .header__back {
@@ -171,6 +240,13 @@ header input {
   color: #353535;
 }
 
+/* Heart fill */
+@keyframes heart-fill {
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 .button__like {
   width: 28px;
   z-index: 0;
@@ -182,6 +258,29 @@ header input {
   background-color: transparent;
   -webkit-text-stroke: 1px white;
   cursor: pointer;
+}
+.button__like:hover::after {
+  z-index: 1;
+  animation: heart-fill forwards;
+}
+.button__like::after {
+  z-index: -1;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 25px;
+  content: "\f004";
+  color: transparent;
+  background: linear-gradient(357deg, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+          background-clip: text;
+  transform-origin: bottom;
+  -webkit-text-stroke: 1px;
 }
 
 .hero__btngradient {
@@ -268,6 +367,9 @@ header input {
   overflow: hidden;
   cursor: pointer;
 }
+.menu-cards:hover > .menu-cards__checkout {
+  margin-right: 0px;
+}
 .menu-cards__info {
   display: flex;
   flex: 1;
@@ -311,7 +413,17 @@ header input {
   margin-right: -20%;
   border-radius: 0px 15px 15px 0px;
   background-color: #99E2D0;
-  transition: margin-right 800ms cubic-bezier(0.63, 1.23, 0.96, 0.92);
+  transition: margin-right 400ms;
+}
+.menu-cards__checkout::after {
+  display: inline-block;
+  margin: auto;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 25px;
+  content: "\f058";
+  color: #ffffff;
+  transition: transform 400ms;
 }
 
 @media (min-width: 768px) {
