--- a/SASS/style.css
+++ b/SASS/style.css
@@ -2,6 +2,7 @@
 /**** cercle ****/
 /**** Shadow ****/
 /**** gradient ****/
+/**** Gradient ****/
 .content-background {
   background: #f2f2f2;
 }
@@ -236,6 +237,27 @@ header input {
   color: #353535;
 }
 
+/* Animation loader */
+@keyframes loading-appear {
+  50% {
+    opacity: 0.95;
+  }
+  99% {
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@keyframes rotate-gradient {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(1440deg);
+  }
+}
 /* Heart fill */
 @keyframes heart-fill {
   100% {
@@ -424,6 +446,48 @@ header input {
   content: "\f058";
   color: #ffffff;
   transition: transform 400ms;
+}
+
+.loader-container {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #ffffff;
+  opacity: 0.9;
+  animation: loading-appear 2s both ease-in-out;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader-spinner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 290px;
+  min-width: 290px;
+  height: 290px;
+  border-radius: 50%;
+  background: linear-gradient(to top, #ae80e5, transparent, #FF79DA);
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.3);
+  z-index: 0;
+  animation: rotate-gradient 3s;
+}
+.loader-spinner::after {
+  z-index: 0;
+  position: absolute;
+  content: "";
+  width: 85%;
+  height: 85%;
+  background-color: #ffffff;
+  border-radius: 50%;
+  animation: pulse 1s ease-in-out infinite;
 }
 
 @media (min-width: 768px) {
