--- a/SASS/style.css
+++ b/SASS/style.css
@@ -61,6 +61,10 @@ header input {
   border: none;
 }
 
+.header-menu {
+  padding: 20px 0 15px 0;
+}
+
 .header__form {
   display: flex;
   height: 50px;
