--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -117,6 +117,10 @@ header {
     }
 }
 
+    .header-menu {
+        padding: 20px 0 15px 0;
+    }
+
 .header__form {
     display: flex;
     height: 50px;
