--- a/SASS/style.css
+++ b/SASS/style.css
@@ -264,6 +264,25 @@ header input {
 }
 /* Heart fill */
 @keyframes heart-fill {
+  0% {
+    opacity: 0;
+    transform: scale(0.2);
+  }
+  15% {
+    opacity: 0.5;
+  }
+  80% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  85% {
+    opacity: 1;
+    transform: scale(1.5);
+  }
+  95% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
   100% {
     opacity: 1;
     transform: scale(1);
@@ -283,7 +302,7 @@ header input {
 }
 .button__like:hover::after {
   z-index: 1;
-  animation: heart-fill forwards;
+  animation: heart-fill 500ms forwards ease-out;
 }
 .button__like::after {
   z-index: -1;
