--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -354,6 +354,30 @@ header {
 
 /* Heart fill */
 @keyframes heart-fill {   
+    0% {
+        opacity: (0);
+        transform: scale(0.2)
+    }
+
+    15% {
+        opacity: (.50);
+    }
+
+    80% {
+        opacity: (1);
+        transform: scale(1);
+    }
+
+    85% {
+        opacity: (1);
+        transform: scale(1.5);
+    }
+
+    95% {
+        opacity: (1);
+        transform: scale(1.1);
+    }
+
     100% {
         opacity: (1);
         transform: scale(1);
@@ -377,7 +401,7 @@ header {
     &:hover {
         &::after {
             z-index: 1;
-            animation: heart-fill forwards;
+            animation: heart-fill 500ms forwards ease-out;
         }
     }
 
