Ajout d'une variable pour le responsive design

--- a/SASS/style.css
+++ b/SASS/style.css
@@ -262,6 +262,24 @@ header input {
     transform: rotate(1440deg);
   }
 }
+/* Menu appear */
+@keyframes menu-appear {
+  10% {
+    opacity: 0.1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  75% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /* Heart fill */
 @keyframes heart-fill {
   0% {
@@ -415,7 +433,7 @@ header input {
   margin-right: 0px;
 }
 .menu-cards:hover > .menu-cards__checkout::after {
-  transform: rotate(360deg);
+  transform: rotate(1080deg);
 }
 .menu-cards__info {
   display: flex;
