--- a/SASS/style.css
+++ b/SASS/style.css
@@ -115,7 +115,7 @@ header input {
 }
 
 .howto {
-  margin: 0 60px 0 60px;
+  margin: 0 60px 50px 60px;
 }
 .howto h2 {
   margin: 50px 0 30px 20px;
@@ -147,6 +147,19 @@ header input {
   background: #9356DC;
 }
 
+.restaurant {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 30px 0 80px 0;
+  background: #f2f2f2;
+}
+.restaurant h2 {
+  padding: 20px 0 20px 0;
+  margin: 0 auto;
+  width: 90%;
+}
+
 .restaurant__cards {
   display: flex;
   flex-direction: column;
@@ -156,6 +169,13 @@ header input {
   border-radius: 15px;
   background-color: #ffffff;
   box-shadow: 0 4px 10px 0 #D5D5D5;
+}
+@media all and (min-width: 768px) {
+  .restaurant__cards {
+    width: 48%;
+    margin: 0;
+    margin-bottom: 4%;
+  }
 }
 .restaurant__cards:hover {
   box-shadow: 0 4px 10px 0 #bcbcbc;
@@ -217,9 +237,12 @@ header input {
   font-size: 25px;
 }
 
+.restaurant__container {
+  width: 90%;
+  margin: auto;
+}
 @media all and (min-width: 768px) {
   .restaurant__container {
-    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -229,10 +252,25 @@ header input {
 .footer__container {
   background: #353535;
   padding: 22px 25px 22px 25px;
-  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+@media all and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-start;
+  }
 }
 .footer__container .footer__container--links {
   padding: 0;
+}
+@media all and (min-width: 768px) {
+  .footer__container .footer__container--links {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+  }
 }
 .footer__container .footer__container--links li {
   display: flex;
@@ -254,6 +292,11 @@ header input {
   font-family: "Shrikhand", cursive;
   font-size: 22px;
   color: #ffffff;
+}
+@media all and (min-width: 768px) {
+  .footer__container--logo {
+    margin-left: 50px;
+  }
 }
 
 .header__back {
