--- a/SASS/style.css
+++ b/SASS/style.css
@@ -466,12 +466,13 @@ header input {
   background-color: #EAEAEA;
   border-radius: 25px 25px 0px 0px;
   padding: 2% 5% 50px 5%;
+  margin-top: -30px;
+  margin-inline: auto;
   z-index: 0;
 }
 @media all and (min-width: 1024px) {
   .menu {
     max-width: 1024px;
-    margin: auto;
   }
 }
 .menu__heading {
