--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -614,11 +614,13 @@ background: #f2f2f2;
     border-radius: 25px 25px 0px 0px;
     // animation: plate-appear 750ms cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     padding: 2% 5% 50px 5%;
+    margin-top: -30px;
+    margin-inline: auto;
     z-index: 0;
 
     @include desktop__responsive {
         max-width: 1024px;
-        margin: auto;
+        // margin: auto;
     }
 
     &__heading {
