--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -537,6 +537,10 @@ background: #f2f2f2;
     &--3 {
         animation: fade-in 2s 1000ms both;
     }
+
+    &--4 {
+        animation: fade-in 2s 1200ms both;
+    }
 }
 
 // **** bouton like **** //
