--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -104,11 +104,13 @@ $radius-link: 30px;
 
     &__content {
         display: flex;
-        gap: 50px;
+        gap: 25px;
         margin: 0 auto;
 
         & a {
             padding: 4px;
+            display: flex;
+            gap: 20px;
         }
     }
 }
@@ -189,7 +191,7 @@ header {
     &__link {
         height: 50px;
         width: 228px;
-        margin: 0 0 25px 0;
+        margin: 0 0 50px 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -279,7 +281,7 @@ background: #f2f2f2;
     flex-direction: column;
     position: relative;
     height: 251px;
-    margin: 10px;
+    margin: 0px 10px 20px 10px;
     border-radius: 15px;
     background-color: $white;
     @include object-shadow;
@@ -650,24 +652,33 @@ background: #f2f2f2;
     flex-direction: column;
     justify-content: center;
 
-    &__heading {
-        position: relative;
-        margin: 4% 0% 2% 0%;
-        padding: 10px 0px;
-        font-size: 18px;
+    // &__heading {
+    //     position: relative;
+    //     margin: 4% 0% 2% 0%;
+    //     padding: 10px 0px;
+    //     font-size: 18px;
+    //     font-weight: map-get($font-weight, light);
+    //     text-transform: uppercase;
+    //     // border-bottom: #99E2D0;
+
+    //     &::after {
+    //         display: block;
+    //         position: absolute; 
+    //         bottom: 2px;
+    //         content: "";
+    //         width: 40px;
+    //         height: 4px;
+    //         background-color: $third-color;
+    //     }
+    // }
+
+    & h3 {
+        border-bottom: 4px $third-color solid;
+        width: 50px;
         font-weight: map-get($font-weight, light);
         text-transform: uppercase;
-
-        &::after {
-            display: block;
-            position: absolute; 
-            bottom: 2px;
-            content: "";
-            width: 40px;
-            height: 4px;
-            background-color: $third-color;
-        }
     }
+
 }
 
 .menu-cards {
