--- a/SASS/style.css
+++ b/SASS/style.css
@@ -33,6 +33,7 @@
   display: flex;
   gap: 25px;
   margin: 0 auto;
+  margin-left: -10px;
 }
 .cards__content a {
   padding: 4px;
@@ -131,13 +132,11 @@ header input {
 .howto {
   margin: 0 60px 50px 60px;
 }
-.howto h2 {
-  margin: 50px 0 30px 105px;
-}
 @media all and (min-width: 1024px) {
   .howto h2 {
     display: flex;
     justify-content: flex-start;
+    margin: 50px 0 30px 105px;
   }
 }
 .howto .howto__cards {
