--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -106,6 +106,7 @@ $radius-link: 30px;
         display: flex;
         gap: 25px;
         margin: 0 auto;
+        margin-left: -10px;
 
         & a {
             padding: 4px;
@@ -220,11 +221,12 @@ header {
     margin: 0 60px 50px 60px;
 
     & h2 {
-        margin: 50px 0 30px 105px;
+        
 
         @include desktop__responsive {
             display: flex;
             justify-content: flex-start;
+            margin: 50px 0 30px 105px;
         }
     }
 
